; ModuleID = '/home/carl/AnghaBench/php-src/main/extr_php_open_temporary_file.c_php_do_open_temporary_file.c'
source_filename = "/home/carl/AnghaBench/php-src/main/extr_php_open_temporary_file.c_php_do_open_temporary_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i64 }

@MAXPATHLEN = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@CWD_REALPATH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"/\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"%s%s%sXXXXXX\00", align 1
@ERROR_INVALID_NAME = common dso_local global i32 0, align 4
@PHP_WIN32_CP_IGNORE_LEN = common dso_local global i32 0, align 4
@_O_BINARY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32**)* @php_do_open_temporary_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @php_do_open_temporary_file(i8* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca %struct.TYPE_3__, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32** %2, i32*** %7, align 8
  %16 = load i32, i32* @MAXPATHLEN, align 4
  %17 = zext i32 %16 to i64
  %18 = call i8* @llvm.stacksave()
  store i8* %18, i8** %8, align 8
  %19 = alloca i8, i64 %17, align 16
  store i64 %17, i64* %9, align 8
  %20 = load i32, i32* @MAXPATHLEN, align 4
  %21 = zext i32 %20 to i64
  %22 = alloca i8, i64 %21, align 16
  store i64 %21, i64* %11, align 8
  store i32 -1, i32* %13, align 4
  %23 = load i32, i32* @O_CREAT, align 4
  %24 = load i32, i32* @O_TRUNC, align 4
  %25 = or i32 %23, %24
  %26 = load i32, i32* @O_RDWR, align 4
  %27 = or i32 %25, %26
  store i32 %27, i32* %14, align 4
  %28 = load i8*, i8** %5, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %30, label %35

30:                                               ; preds = %3
  %31 = load i8*, i8** %5, align 8
  %32 = getelementptr inbounds i8, i8* %31, i64 0
  %33 = load i8, i8* %32, align 1
  %34 = icmp ne i8 %33, 0
  br i1 %34, label %36, label %35

35:                                               ; preds = %30, %3
  store i32 -1, i32* %4, align 4
  store i32 1, i32* %15, align 4
  br label %101

36:                                               ; preds = %30
  %37 = load i32, i32* @MAXPATHLEN, align 4
  %38 = call i32 @VCWD_GETCWD(i8* %22, i32 %37)
  %39 = icmp ne i32 %38, 0
  br i1 %39, label %42, label %40

40:                                               ; preds = %36
  %41 = getelementptr inbounds i8, i8* %22, i64 0
  store i8 0, i8* %41, align 16
  br label %42

42:                                               ; preds = %40, %36
  %43 = call i8* @estrdup(i8* %22)
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  store i8* %43, i8** %44, align 8
  %45 = call i64 @strlen(i8* %22)
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  store i64 %45, i64* %46, align 8
  %47 = load i8*, i8** %5, align 8
  %48 = load i32, i32* @CWD_REALPATH, align 4
  %49 = call i64 @virtual_file_ex(%struct.TYPE_3__* %12, i8* %47, i32* null, i32 %48)
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %55

51:                                               ; preds = %42
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %53 = load i8*, i8** %52, align 8
  %54 = call i32 @efree(i8* %53)
  store i32 -1, i32* %4, align 4
  store i32 1, i32* %15, align 4
  br label %101

55:                                               ; preds = %42
  %56 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %57 = load i8*, i8** %56, align 8
  %58 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 1
  %59 = load i64, i64* %58, align 8
  %60 = sub i64 %59, 1
  %61 = getelementptr inbounds i8, i8* %57, i64 %60
  %62 = load i8, i8* %61, align 1
  %63 = call i64 @IS_SLASH(i8 signext %62)
  %64 = icmp ne i64 %63, 0
  br i1 %64, label %65, label %66

65:                                               ; preds = %55
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %10, align 8
  br label %67

66:                                               ; preds = %55
  store i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i8** %10, align 8
  br label %67

67:                                               ; preds = %66, %65
  %68 = load i32, i32* @MAXPATHLEN, align 4
  %69 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %70 = load i8*, i8** %69, align 8
  %71 = load i8*, i8** %10, align 8
  %72 = load i8*, i8** %6, align 8
  %73 = call i32 @snprintf(i8* %19, i32 %68, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0), i8* %70, i8* %71, i8* %72)
  %74 = load i32, i32* @MAXPATHLEN, align 4
  %75 = icmp sge i32 %73, %74
  br i1 %75, label %76, label %80

76:                                               ; preds = %67
  %77 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %78 = load i8*, i8** %77, align 8
  %79 = call i32 @efree(i8* %78)
  store i32 -1, i32* %4, align 4
  store i32 1, i32* %15, align 4
  br label %101

80:                                               ; preds = %67
  %81 = call i64 @mktemp(i8* %19)
  %82 = icmp ne i64 %81, 0
  br i1 %82, label %83, label %86

83:                                               ; preds = %80
  %84 = load i32, i32* %14, align 4
  %85 = call i32 @VCWD_OPEN(i8* %19, i32 %84)
  store i32 %85, i32* %13, align 4
  br label %86

86:                                               ; preds = %83, %80
  %87 = load i32, i32* %13, align 4
  %88 = icmp ne i32 %87, -1
  br i1 %88, label %89, label %96

89:                                               ; preds = %86
  %90 = load i32**, i32*** %7, align 8
  %91 = icmp ne i32** %90, null
  br i1 %91, label %92, label %96

92:                                               ; preds = %89
  %93 = call i64 @strlen(i8* %19)
  %94 = call i32* @zend_string_init(i8* %19, i64 %93, i32 0)
  %95 = load i32**, i32*** %7, align 8
  store i32* %94, i32** %95, align 8
  br label %96

96:                                               ; preds = %92, %89, %86
  %97 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %98 = load i8*, i8** %97, align 8
  %99 = call i32 @efree(i8* %98)
  %100 = load i32, i32* %13, align 4
  store i32 %100, i32* %4, align 4
  store i32 1, i32* %15, align 4
  br label %101

101:                                              ; preds = %96, %76, %51, %35
  %102 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %102)
  %103 = load i32, i32* %4, align 4
  ret i32 %103
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @VCWD_GETCWD(i8*, i32) #2

declare dso_local i8* @estrdup(i8*) #2

declare dso_local i64 @strlen(i8*) #2

declare dso_local i64 @virtual_file_ex(%struct.TYPE_3__*, i8*, i32*, i32) #2

declare dso_local i32 @efree(i8*) #2

declare dso_local i64 @IS_SLASH(i8 signext) #2

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i8*, i8*) #2

declare dso_local i64 @mktemp(i8*) #2

declare dso_local i32 @VCWD_OPEN(i8*, i32) #2

declare dso_local i32* @zend_string_init(i8*, i64, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
